# music-organizer

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  directories.rs  main.rs  runtime.rs
app/src/app/: actions.rs
app/src/runtime/: file_picker.rs  library.rs  task.rs
app/src/widgets/: library.rs
core/: Cargo.toml
core/src/: archive.rs  database.rs  error.rs  lib.rs  song_source.rs  source.rs  types.rs  utils.rs
core/src/audio/: identify.rs
core/src/audio/identify/: acoustid.rs  fingerprint.rs
core/src/database/: entry.rs  file.rs  info.rs
core/src/source/: local.rs
core/src/types/: song_data.rs  song_file_format.rs  song_file_info.rs  song_info.rs
