[package]
name = "music-organizer-app"
version = "0.1.0"
edition = "2024"

[dependencies]
music-organizer-core = { workspace = true }
anyhow = "1.0.100"
directories = "6.0.0"
eframe = { version = "0.33.3", features = ["persistence", "wgpu"] }
egui = { version = "0.33.3", features = ["persistence"] }
egui_extras = "0.33.3"
egui-file-dialog = "0.12.0"
egui-notify = "0.21.0"
egui-phosphor = { version = "0.11.0", features = ["regular"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }